Fix definition of new parameters in the scream_namelist_defaults
This commit also updates all of the coupled and uncoupled scream unit
tests to take advantage of the new parameters.  In particular, rather
than setting aerosol forcings to 0.0 at initialization via runtime option,
for tests that don't use SPA, use the runtime options these commits
will introduce to avoid using aerosol forcings.

Additionally, this commit cleans up the output parameters for these tests
to just focus on fields that are actually changed during simulation, rather
than those that are set by an initial condition.  The output files are also
formatted to label which output fields are set by which processes.  This will
make it easier to quickly adjust the output streams when doing experiments
where we are adding and removing processes.

--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -14,10 +14,6 @@ Initial Conditions:
   Physics GLL:
     surf_latent_flux: 0.0
     surf_sens_flux: 0.0
-    aero_g_sw: 0.0
-    aero_ssa_sw: 0.0
-    aero_tau_sw: 0.0
-    aero_tau_lw: 0.0
 
 atmosphere_processes:
   atm_procs_list: (homme,physics)
@@ -41,9 +37,11 @@ atmosphere_processes:
         Grid: Physics GLL
       p3:
         Grid: Physics GLL
+        do_prescribed_ccn: false
     rrtmgp:
       Grid: Physics GLL
       active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
+      do_aerosol_rad: false
 
 Grids Manager:
   Type: Dynamics Driven
