--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -14,11 +14,6 @@ Time Stepping:
 Initial Conditions:
   Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L72_20220524.nc
   Restart Run: false
-  Physics GLL:
-    aero_g_sw: 0.0
-    aero_ssa_sw: 0.0
-    aero_tau_sw: 0.0
-    aero_tau_lw: 0.0
 
 atmosphere_processes:
   atm_procs_list: (homme,physics)
@@ -43,9 +38,11 @@ atmosphere_processes:
         Grid: Physics GLL
       p3:
         Grid: Physics GLL
+        do_prescribed_ccn: false
     rrtmgp:
       Grid: Physics GLL
       active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
+      do_aerosol_rad: false
 
 Grids Manager:
   Type: Dynamics Driven
