--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
@@ -14,6 +14,9 @@ Time Stepping:
 Initial Conditions:
   Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L72_20220524.nc
   Restart Run: false
+  Physics GLL:
+    surf_evap: 0.0
+    surf_sens_flux: 0.0
 
 atmosphere_processes:
   atm_procs_list: (homme,physics)
