--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -11,9 +11,9 @@ Time Stepping:
 
 Initial Conditions:
   Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L128_20220525.nc
-  Physics GLL:
-    surf_evap: 0.0
-    surf_sens_flux: 0.0
+  surf_evap: 0.0
+  surf_latent_flux: 0.0
+  surf_sens_flux: 0.0
 
 atmosphere_processes:
   atm_procs_list: (homme,physics)
