--- a/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -40,6 +40,9 @@ Grids Manager:
 Initial Conditions:
   # The name of the file containing the initial conditions for this test.
   Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L72_20220524.nc
+  surf_latent_flux: 0.0
+  surf_sens_flux: 0.0
+  surf_evap: 0.0
   Point Grid:
     Load Latitude:  true
     Load Longitude: true
