--- a/components/scream/tests/uncoupled/shoc/input.yaml
+++ b/components/scream/tests/uncoupled/shoc/input.yaml
@@ -24,9 +24,10 @@ Grids Manager:
 Initial Conditions:
   # The name of the file containing the initial conditions for this test.
   Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L72_20220524.nc
+  surf_latent_flux: 0.0
+  surf_sens_flux: 0.0
+  surf_evap: 0.0
   Point Grid:
-    surf_evap: 0.0
-    surf_sens_flux: 0.0
     Load Latitude: true
 
 # The parameters for I/O control
