--- a/components/scream/src/share/io/tests/io_test_restart_check.yaml
+++ b/components/scream/src/share/io/tests/io_test_restart_check.yaml
@@ -7,7 +7,7 @@ Field Names: [field_1, field_2, field_3, field_4]
 output_control:
   MPI Ranks in Filename: true
   Frequency: 10
-  frequency_units: Steps
+  frequency_units: nsteps
 Restart:
   MPI Ranks in Filename: true
   Casename: io_output_restart
