--- a/components/scream/tests/coupled/surface_coupling_only/input.yaml
+++ b/components/scream/tests/coupled/surface_coupling_only/input.yaml
@@ -21,21 +21,21 @@ Grids Manager:
   Number of Vertical Levels:  72  # Will want to change to 128 when a valid unit test is available.
 
 Initial Conditions:
-  # These fields are used during the export. We set them to constant values
-  p_int:                1.0
-  pseudo_density:       2.0
-  phis:                 3.0
-  p_mid:                4.0
-  qv:                   5.0
-  T_mid:                6.0
-  horiz_winds:         [7.0, 8.0]
-  precip_liq_surf_mas:  9.0
-  precip_ice_surf_mass: 10.0
-  sfc_flux_dir_nir:     11.0
-  sfc_flux_dir_vis:     12.0
-  sfc_flux_dif_nir:     13.0
-  sfc_flux_dif_vis:     14.0
-  sfc_flux_sw_net:      15.0
-  sfc_flux_lw_dn:       16.0
+  # The name of the file containing the initial conditions for this test.
+  Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_72lev}
+  # Some fields needed for the exports (not in ic file)
+  precip_ice_surf_mass: 1.0
+  precip_liq_surf_mass: 2.0
+  sfc_flux_sw_net:      3.0
+  # These fields are needed for the export,
+  # but will be computed for the import
+  sfc_flux_dif_nir:     0.0
+  sfc_flux_dif_vis:     0.0
+  sfc_flux_dir_nir:     0.0
+  sfc_flux_dir_vis:     0.0
+  sfc_flux_lw_dn:       0.0
 
+# The parameters for I/O control
+Scorpio:
+  Output YAML Files: ["output.yaml"]
 ...
