Calculate pref_mid

--- a/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
@@ -48,6 +48,7 @@ Initial Conditions:
   aero_tau_lw: 0.0
   Load Latitude:  true
   Load Longitude: true
+  Load Hybrid Coefficients: true
 
 # The parameters for I/O control
 Scorpio:
