--- a/components/scream/tests/coupled/physics_only/atm_proc_subcycling/input.yaml
+++ b/components/scream/tests/coupled/physics_only/atm_proc_subcycling/input.yaml
@@ -32,6 +32,7 @@ Initial Conditions:
   precip_liq_surf_mass: 0.0
   Load Latitude:  true
   Load Longitude: true
+  Load Hybrid Coefficients: true
 
 # The parameters for I/O control
 Scorpio:
