--- a/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -46,6 +46,7 @@ Initial Conditions:
   precip_ice_surf_mass: 0.0
   Load Latitude:  true
   Load Longitude: true
+  Load Hybrid Coefficients: true
 
 # The parameters for I/O control
 Scorpio:
