--- a/components/scream/tests/uncoupled/rrtmgp/input.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input.yaml
@@ -17,7 +17,7 @@ atmosphere_processes:
     Grid: Point Grid
     column_chunk_size: ${COL_CHUNK_SIZE}
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
-    Orbital Year: 1990
+    orbital_year: 1990
     Can Initialize All Inputs: true
     rad_frequency: 3
     do_aerosol_rad: false
