Orbital MVELP -> orbital_mvelp

--- a/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
@@ -13,7 +13,7 @@ atmosphere_processes:
     # Set orbital parameters to constants for consistency with RRTMGP test problem
     orbital_eccentricity: 0
     orbital_obliquity: 0
-    Orbital MVELP: 0
+    orbital_mvelp: 0
     Fixed Solar Zenith Angle: 0.86
     do_aerosol_rad: false
 
