--- a/components/scream/tests/uncoupled/zm/input.yaml
+++ b/components/scream/tests/uncoupled/zm/input.yaml
@@ -16,7 +16,7 @@ atmosphere_processes:
 
 grids_manager:
   Type: Mesh Free
-  Reference Grid: Point Grid
+  reference_grid: Point Grid
   Number of Global Columns:   32
   Number of Vertical Levels: 128
 ...
