--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -54,7 +54,7 @@ atmosphere_processes:
 
 grids_manager:
   Type: Dynamics Driven
-  Reference Grid: Physics GLL
+  reference_grid: Physics GLL
   Dynamics Namelist File Name: namelist.nl
 
 # List all the yaml files with the output parameters
