--- a/components/scream/tests/uncoupled/homme/input.yaml
+++ b/components/scream/tests/uncoupled/homme/input.yaml
@@ -21,7 +21,7 @@ atmosphere_processes:
 
 grids_manager:
   Type: Dynamics Driven
-  Reference Grid: Physics GLL
+  reference_grid: Physics GLL
   Dynamics Namelist File Name: namelist.nl
 
 # The parameters for I/O control
