--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -55,7 +55,7 @@ atmosphere_processes:
 grids_manager:
   Type: Dynamics Driven
   reference_grid: Physics GLL
-  Dynamics Namelist File Name: namelist.nl
+  dynamics_namelist_file_name: namelist.nl
 
 # List all the yaml files with the output parameters
 Scorpio:
