--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_restarted.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_restarted.yaml
@@ -47,7 +47,7 @@ atmosphere_processes:
 grids_manager:
   Type: Dynamics Driven
   reference_grid: Physics GLL
-  Dynamics Namelist File Name: namelist.nl
+  dynamics_namelist_file_name: namelist.nl
 
 # List all the yaml files with the output parameters
 Scorpio:
