Output YAML Files -> output_yaml_files

--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -64,5 +64,5 @@ Scorpio:
     Output Control:
       Frequency:       1
       Frequency Units: Steps
-  Output YAML Files: ["model_restart_output.yaml"]
+  output_yaml_files: ["model_restart_output.yaml"]
 ...
