--- a/components/scream/tests/coupled/physics_only/atm_proc_subcycling/input.yaml
+++ b/components/scream/tests/coupled/physics_only/atm_proc_subcycling/input.yaml
@@ -36,5 +36,5 @@ initial_conditions:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: [output_${POSTFIX}.yaml]
+  output_yaml_files: [output_${POSTFIX}.yaml]
 ...
