--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -56,5 +56,5 @@ grids_manager:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: ["homme_shoc_cld_p3_rrtmgp_output.yaml"]
+  output_yaml_files: ["homme_shoc_cld_p3_rrtmgp_output.yaml"]
 ...
