--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
@@ -59,5 +59,5 @@ grids_manager:
 
 # List all the yaml files with the output parameters
 Scorpio:
-  Output YAML Files: ["model_output.yaml"]
+  output_yaml_files: ["model_output.yaml"]
 ...
