--- a/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
@@ -53,5 +53,5 @@ initial_conditions:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: ["shoc_cld_p3_rrtmgp_output.yaml"]
+  output_yaml_files: ["shoc_cld_p3_rrtmgp_output.yaml"]
 ...
