--- a/components/scream/tests/coupled/surface_coupling_only/input.yaml
+++ b/components/scream/tests/coupled/surface_coupling_only/input.yaml
@@ -37,5 +37,5 @@ initial_conditions:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: ["surface_coupling_output.yaml"]
+  output_yaml_files: ["surface_coupling_output.yaml"]
 ...
