--- a/components/scream/tests/uncoupled/shoc/input.yaml
+++ b/components/scream/tests/uncoupled/shoc/input.yaml
@@ -31,5 +31,5 @@ initial_conditions:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: ["shoc_standalone_output.yaml"]
+  output_yaml_files: ["shoc_standalone_output.yaml"]
 ...
