--- a/components/scream/tests/coupled/physics_only/atm_proc_subcycling/output.yaml
+++ b/components/scream/tests/coupled/physics_only/atm_proc_subcycling/output.yaml
@@ -33,7 +33,7 @@ Field Names:
   - eff_radius_qc
   - eff_radius_qi
  
-Output Control:
+output_control:
   Frequency: ${NUM_STEPS}
   Frequency Units: Steps
   Timestamp in Filename: false
