--- a/components/scream/tests/coupled/surface_coupling_only/surface_coupling_output.yaml
+++ b/components/scream/tests/coupled/surface_coupling_only/surface_coupling_output.yaml
@@ -16,7 +16,7 @@ Field Names:
   # EXPORTER
   - precip_liq_surf_mass
   - precip_ice_surf_mass
-Output Control:
+output_control:
   Frequency: 1
   Frequency Units: Steps
   Timestamp in Filename: false
