--- a/components/scream/src/share/io/tests/io_test_instant.yaml
+++ b/components/scream/src/share/io/tests/io_test_instant.yaml
@@ -4,7 +4,7 @@ Casename: io_output_test
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Field Names: [field_1, field_2, field_3, field_packed, DummyDiagnostic]
-Output Control:
+output_control:
   MPI Ranks in Filename: true
   Frequency: 10
   Frequency Units: Steps
