--- a/components/scream/src/share/io/tests/io_test_multisnap.yaml
+++ b/components/scream/src/share/io/tests/io_test_multisnap.yaml
@@ -4,7 +4,7 @@ Casename: io_multisnap_test
 Averaging Type: Instant
 Max Snapshots Per File: 10
 Field Names: [field_1, field_2, field_3, field_packed]
-Output Control:
+output_control:
   MPI Ranks in Filename: true
   Frequency: 1
   Frequency Units: Steps
