--- a/components/scream/tests/coupled/dynamics_physics/model_restart/model_output.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/model_output.yaml
@@ -68,7 +68,7 @@ Fields:
       - v_dyn
       - vtheta_dp_dyn
       - dp3d_dyn
-Output Control:
+output_control:
   MPI Ranks in Filename: true
   Frequency: 2
   Frequency Units: Steps
