--- a/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/shoc_cld_p3_rrtmgp_output.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/shoc_cld_p3_rrtmgp_output.yaml
@@ -50,7 +50,7 @@ Field Names:
   - rad_heating_pdel
   - sfc_flux_lw_dn
   - sfc_flux_sw_net
-Output Control:
+output_control:
   Frequency: ${NUM_STEPS}
   Frequency Units: Steps
   Timestamp in Filename: false
