--- a/components/scream/tests/uncoupled/homme/homme_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/homme/homme_standalone_output.yaml
@@ -17,7 +17,7 @@ Fields:
       - p_dry_int
       - p_dry_mid
  
-Output Control:
+output_control:
   Frequency: ${NUM_STEPS}
   Frequency Units: Steps
   Timestamp in Filename: false
